# Dalamud

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .nuke  CMakeLists.txt  CreateHashList.ps1  Dalamud.sln  Dalamud.sln.DotSettings  Directory.Build.props  Directory.Packages.props  README.md  build.cmd  build.ps1  build.sh  docfx.json  filterConfig.yml  filter_imgui_bindings.ps1  generate_imgui_bindings.ps1  global.json  index.md  release.ps1  sign.ps1  test.ps1
.github/: CODEOWNERS  fixedcsc.json  generate_changelog.py
.nuke/: build.schema.json  parameters.json
Dalamud/: AssemblyInfo.cs  ClientLanguage.cs  ClientLanguageExtensions.cs  Dalamud.cs  Dalamud.csproj  Dalamud.csproj.DotSettings  DalamudAsset.cs  DalamudCommands.cs  DalamudStartInfo.cs  EntryPoint.cs  EnumCloneMap.txt  EnumExtensions.cs  Fools2021.cs  Fools22.cs  GlobalSuppressions.cs  IServiceObject.cs  ModuleLog.cs  (+17 more)
Dalamud.Boot/: CMakeLists.txt  Dalamud.Boot.rc  Dalamud.Boot.vcxproj  Dalamud.Boot.vcxproj.filters  DalamudStartInfo.cpp  DalamudStartInfo.h  bootconfig.h  budget_hooks.cpp  budget_hooks.h  crashhandler_shared.h  dllmain.cpp  error_info.cpp  error_info.h  hooks.cpp  hooks.h  logging.cpp  logging.h  main.cpp  module.def  ntdll.cpp  ntdll.h  pch.h  pch_nmd_assembly_impl.cpp  resource.h  rewrite_entrypoint.cpp  rewrite_entrypoint_thunks.asm  srell.h  themes.manifest  unicode.cpp  unicode.h  utils.cpp  utils.h  veh.cpp  veh.h  xivfixes.cpp  xivfixes.h
Dalamud.Bootstrap/: BootstrapException.cs  BootstraperException.cs  Bootstrapper.cs  BootstrapperOptions.cs  Dalamud.Bootstrap.csproj  Exceptions.cs  GameProcess.Arguments.cs  GameProcess.Win32.Memory.cs  GameProcess.Win32.Process.cs  GameProcess.cs  GameProcessCreationOptions.cs  ProcessException.cs
Dalamud.Broker/: Dalamud.Broker.csproj  NativeMethods.txt  Program.cs
Dalamud.Broker.Protos/: BrokerDebugging.proto  Dalamud.Broker.Protos.csproj
Dalamud.Common/: ClientLanguage.cs  Dalamud.Common.csproj  DalamudStartInfo.cs  LoadMethod.cs  OSPlatformConverter.cs  UnhandledExceptionHandlingMode.cs
Dalamud.CorePlugin/: Dalamud.CorePlugin.csproj  Dalamud.CorePlugin.json  FontChainAtlas.cs  GlobalSuppressions.cs  ImVectorWrapper.cs  PluginImpl.cs  PluginWindow.cs  StyleEditorWindow.cs
Dalamud.Injector/: Dalamud.Injector.csproj  DalamudLauncher.cs  DalamudLauncherException.cs  DalamudLauncherOptions.cs  DalamudLoadMode.cs  EntryPoint.cs  Exceptions.cs  ExistingProcess.cs  GameLaunchContext.cs  GameStart.cs  GlobalSuppressions.cs  Hacks.cs  Injector.cs  LegacyBlowfish.cs  NativeAclFix.cs  NativeFunctions.cs  NativeMethods.json  NativeMethods.txt  Options.cs  Process.cs  Program.cs  RewriteOriginalEntrypoint.cs  Util.cs
Dalamud.Injector.Boot/: Dalamud.Injector.Boot.vcxproj  Dalamud.Injector.Boot.vcxproj.filters  main.cpp
Dalamud.Interface/: ArrayExtensions.cs  Dalamud.Interface.csproj  ImGuiClip.cs  ImGuiTable.cs  InterfaceHelpers.cs  StableInsertionSortExtension.cs
Dalamud.Test/: Dalamud.Test.csproj  LocalizationTests.cs  packages.config
Dalamud.Testing/: BootstrapTests.cs  Dalamud.Testing.csproj
DalamudCrashHandler/: CMakeLists.txt  DalamudCrashHandler.cpp  DalamudCrashHandler.rc  DalamudCrashHandler.vcxproj  DalamudCrashHandler.vcxproj.filters  createprocess.manifest  dac_interfaces.h  miniz.h  resource.h
(+5137 files in other folders)
